--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -42,6 +42,56 @@
     --color-warning: #fab005;
     --color-error: #fa5252;
     --color-info: #228be6;
+
+    /* Additional colors needed by components */
+    --color-text: #212529;
+    --color-text-tertiary: #adb5bd;
+    --color-primary: #228be6;
+    --color-primary-hover: #1c7ed6;
+    --color-primary-active: #1971c2;
+    --color-border: #dee2e6;
+    --color-border-tertiary: #f8f9fa;
+    --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      "Helvetica Neue", Arial, sans-serif;
+    --font-size-xs: 0.75rem;
+    --font-size-sm: 0.875rem;
+    --font-size-md: 1rem;
+    --font-size-lg: 1.125rem;
+    --font-size-xl: 1.25rem;
+    --font-size-2xl: 1.5rem;
+    --radius-sm: 0.25rem;
+    --radius-md: 0.375rem;
+    --radius-lg: 0.5rem;
+    --spacing-xs: 0.25rem;
+    --spacing-sm: 0.5rem;
+    --spacing-md: 1rem;
+    --spacing-lg: 1.5rem;
+    --spacing-xl: 2rem;
+  }
+
+  /* Dark theme variables */
+  [data-theme="dark"] {
+    --color-background: #1a1a1a;
+    --color-surface: #2d2d2d;
+    --color-surface-secondary: #3a3a3a;
+    --color-surface-tertiary: #4a4a4a;
+    --color-text: #ffffff;
+    --color-text-secondary: #b0b0b0;
+    --color-text-tertiary: #808080;
+    --color-primary: #4dabf7;
+    --color-primary-hover: #74c0fc;
+    --color-primary-active: #339af0;
+    --color-secondary: #868e96;
+    --color-secondary-hover: #adb5bd;
+    --color-secondary-active: #6c757d;
+    --color-success: #51cf66;
+    --color-warning: #ffd43b;
+    --color-error: #ff6b6b;
+    --color-info: #74c0fc;
+    --color-border: #404040;
+    --color-border-secondary: #4a4a4a;
+    --color-border-tertiary: #5a5a5a;
+    --color-shadow: rgba(0, 0, 0, 0.5);
   }
 
   /* Fix Storybook canvas sizing */
